syntax = "proto3";
package virtengine.market.v2beta1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

import "cosmos/base/v1beta1/coin.proto";

import "virtengine/market/v2beta1/resourcesoffer.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/market/v2beta1";

// BidID stores owner and all other seq numbers.
// A successful bid becomes a Lease(ID).
message BidID {
  option (gogoproto.equal)            = true;
  option (gogoproto.goproto_stringer) = false;

  // Owner is the account bech32 address of the user who owns the deployment.
  // It is a string representing a valid bech32 account address.
  //
  // Example:
  //   "akash1..."
  string owner = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag)   = "owner",
    (gogoproto.moretags)  = "yaml:\"owner\""
  ];

  // Dseq (deployment sequence number) is a unique numeric identifier for the deployment.
  // It is used to differentiate deployments created by the same owner.
  uint64 dseq  = 2 [
    (gogoproto.customname) = "DSeq",
    (gogoproto.jsontag)    = "dseq",
    (gogoproto.moretags)   = "yaml:\"dseq\""
  ];

  // Gseq (group sequence number) is a unique numeric identifier for the group.
  // It is used to differentiate groups created by the same owner in a deployment.
  uint32 gseq = 3 [
    (gogoproto.customname) = "GSeq",
    (gogoproto.jsontag)    = "gseq",
    (gogoproto.moretags)   = "yaml:\"gseq\""
  ];
  // Oseq (order sequence) distinguishes multiple orders associated with a single deployment.
  // Oseq is incremented when a lease associated with an existing deployment is closed, and a new order is generated.
  uint32 oseq = 4 [
    (gogoproto.customname) = "OSeq",
    (gogoproto.jsontag)    = "oseq",
    (gogoproto.moretags)   = "yaml:\"oseq\""
  ];

  // Provider is the account bech32 address of the provider making the bid.
  // It is a string representing a valid account bech32 address.
  //
  // Example:
  //   "akash1..."
  string provider = 5 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag)   = "provider",
    (gogoproto.moretags)  = "yaml:\"provider\""
  ];

  // BSeq (bid sequence) distinguishes multiple bids associated with a single deployment from same provider.
  uint32 bseq = 6 [
    (gogoproto.customname) = "BSeq",
    (gogoproto.jsontag)    = "bseq",
    (gogoproto.moretags)   = "yaml:\"bseq\""
  ];
}


// Bid stores BidID, state of bid and price.
message Bid {
  option (gogoproto.equal)            = true;
  option (gogoproto.goproto_stringer) = false;

  // BidState is an enum which refers to state of bid.
  enum State {
    option (gogoproto.goproto_enum_prefix) = false;

    // Prefix should start with 0 in enum. So declaring dummy state.
    invalid = 0 [
        (gogoproto.enumvalue_customname) = "BidStateInvalid"
    ];
    // BidOpen denotes state for bid open.
    open = 1 [
        (gogoproto.enumvalue_customname) = "BidOpen"
    ];
    // BidMatched denotes state for bid open.
    active = 2 [
        (gogoproto.enumvalue_customname) = "BidActive"
    ];
    // BidLost denotes state for bid lost.
    lost = 3 [
        (gogoproto.enumvalue_customname) = "BidLost"
    ];
    // BidClosed denotes state for bid closed.
    closed = 4 [
        (gogoproto.enumvalue_customname) = "BidClosed"
    ];
  }

  // BidID stores owner and all other seq numbers.
  // A successful bid becomes a Lease(ID).
  BidID id = 1 [
    (gogoproto.customname) = "ID",
    (gogoproto.nullable)   = false,
    (gogoproto.jsontag)    = "id",
    (gogoproto.moretags)   = "yaml:\"id\""
  ];

  // State represents the state of the Bid.
  State state = 2 [
    (gogoproto.jsontag)  = "state",
    (gogoproto.moretags) = "yaml:\"state\""
  ];

  // Price holds the pricing stated on the Bid.
  repeated cosmos.base.v1beta1.DecCoin prices = 3 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins",
    (gogoproto.nullable) = false,
    (gogoproto.jsontag)  = "prices",
    (gogoproto.moretags) = "yaml:\"prices\""
  ];

  // CreatedAt is the block height at which the Bid was created.
  int64 created_at = 4 [
    (gogoproto.jsontag)  = "createdAt",
    (gogoproto.moretags) = "yaml:\"created_at\""
  ];

  // ResourceOffer is a list of offers.
  repeated ResourceOffer resources_offer = 5 [
    (gogoproto.nullable)     = false,
    (gogoproto.castrepeated) = "ResourcesOffer",
    (gogoproto.customname)   = "ResourcesOffer",
    (gogoproto.jsontag)      = "resources_offer",
    (gogoproto.moretags)     = "yaml:\"resources_offer\""
  ];
}
