syntax = "proto3";
package virtengine.settlement.v1;

import "google/api/annotations.proto";
import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/settlement/v1";

// ReleaseCondition defines a condition that must be met for escrow release.
message ReleaseCondition {
  string type = 1;
  int64 unlock_after = 2;
  repeated string required_signers = 3;
  uint32 signature_threshold = 4;
  uint64 min_usage_units = 5;
  uint32 required_verification_score = 6;
  bool satisfied = 7;
  int64 satisfied_at = 8;
}

// EscrowAccount represents funds held in escrow for a marketplace order.
message EscrowAccount {
  string escrow_id = 1;
  string order_id = 2;
  string lease_id = 3;
  string depositor = 4 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string recipient = 5 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  repeated cosmos.base.v1beta1.Coin amount = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  repeated cosmos.base.v1beta1.Coin balance = 7 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  string state = 8;
  repeated ReleaseCondition conditions = 9 [(gogoproto.nullable) = false];
  int64 created_at = 10;
  int64 expires_at = 11;
  int64 activated_at = 12;
  int64 closed_at = 13;
  string closure_reason = 14;
  repeated cosmos.base.v1beta1.Coin total_settled = 15 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  uint32 settlement_count = 16;
  int64 block_height = 17;
}

// SettlementRecord represents a completed settlement for an order.
message SettlementRecord {
  string settlement_id = 1;
  string escrow_id = 2;
  string order_id = 3;
  string lease_id = 4;
  string provider = 5 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string customer = 6 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  repeated cosmos.base.v1beta1.Coin total_amount = 7 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  repeated cosmos.base.v1beta1.Coin provider_share = 8 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  repeated cosmos.base.v1beta1.Coin platform_fee = 9 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  repeated cosmos.base.v1beta1.Coin validator_fee = 10 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  int64 settled_at = 11;
  repeated string usage_record_ids = 12;
  uint64 total_usage_units = 13;
  int64 period_start = 14;
  int64 period_end = 15;
  int64 block_height = 16;
  string settlement_type = 17;
  bool is_final = 18;
}

// UsageRecord represents a signed usage record from a provider.
message UsageRecord {
  string usage_id = 1;
  string order_id = 2;
  string lease_id = 3;
  string provider = 4 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string customer = 5 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 usage_units = 6;
  string usage_type = 7;
  int64 period_start = 8;
  int64 period_end = 9;
  cosmos.base.v1beta1.DecCoin unit_price = 10 [(gogoproto.nullable) = false];
  repeated cosmos.base.v1beta1.Coin total_cost = 11 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  bytes provider_signature = 12;
  bool customer_acknowledged = 13;
  bytes customer_signature = 14;
  bool settled = 15;
  string settlement_id = 16;
  int64 submitted_at = 17;
  int64 block_height = 18;
  map<string, string> metadata = 19;
}

// UsageTypeSummary aggregates usage by type.
message UsageTypeSummary {
  string usage_type = 1;
  uint64 usage_units = 2;
  repeated cosmos.base.v1beta1.Coin total_cost = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}

// UsageSummary provides aggregated usage information.
message UsageSummary {
  string provider = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string order_id = 2;
  int64 period_start = 3;
  int64 period_end = 4;
  uint64 total_usage_units = 5;
  repeated cosmos.base.v1beta1.Coin total_cost = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  repeated UsageTypeSummary by_usage_type = 7 [(gogoproto.nullable) = false];
  int64 generated_at = 8;
  int64 block_height = 9;
  repeated string usage_record_ids = 10;
}

// RewardRecipient represents a single reward recipient.
message RewardRecipient {
  string address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  repeated cosmos.base.v1beta1.Coin amount = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  string reason = 3;
  uint64 usage_units = 4;
  uint32 verification_score = 5;
  string staking_weight = 6;
  string reference_id = 7;
}

// RewardDistribution represents a batch of rewards distributed.
message RewardDistribution {
  string distribution_id = 1;
  uint64 epoch_number = 2;
  repeated cosmos.base.v1beta1.Coin total_rewards = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  repeated RewardRecipient recipients = 4 [(gogoproto.nullable) = false];
  string source = 5;
  int64 distributed_at = 6;
  int64 block_height = 7;
  repeated string reference_tx_hashes = 8;
  map<string, string> metadata = 9;
}

// RewardHistoryEntry represents a reward distribution entry for an address.
message RewardHistoryEntry {
  string distribution_id = 1;
  uint64 epoch_number = 2;
  string source = 3;
  repeated cosmos.base.v1beta1.Coin amount = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  string reason = 5;
  uint64 usage_units = 6;
  string reference_id = 7;
  int64 distributed_at = 8;
}

// RewardEntry represents a single claimable reward entry.
message RewardEntry {
  string distribution_id = 1;
  string source = 2;
  repeated cosmos.base.v1beta1.Coin amount = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  int64 created_at = 4;
  int64 expires_at = 5;
  string reason = 6;
}

// ClaimableRewards represents rewards that can be claimed by an address.
message ClaimableRewards {
  string address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  repeated cosmos.base.v1beta1.Coin total_claimable = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  repeated RewardEntry reward_entries = 3 [(gogoproto.nullable) = false];
  int64 last_updated = 4;
  repeated cosmos.base.v1beta1.Coin total_claimed = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}

// PayoutRecord represents a payout execution record.
message PayoutRecord {
  string payout_id = 1;
  string fiat_conversion_id = 2;
  string invoice_id = 3;
  string settlement_id = 4;
  string escrow_id = 5;
  string order_id = 6;
  string lease_id = 7;
  string provider = 8 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string customer = 9 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  repeated cosmos.base.v1beta1.Coin gross_amount = 10 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  repeated cosmos.base.v1beta1.Coin platform_fee = 11 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  repeated cosmos.base.v1beta1.Coin validator_fee = 12 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  repeated cosmos.base.v1beta1.Coin holdback_amount = 13 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  repeated cosmos.base.v1beta1.Coin net_amount = 14 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  string state = 15;
  string dispute_id = 16;
  string hold_reason = 17;
  string idempotency_key = 18;
  uint32 execution_attempts = 19;
  int64 last_attempt_at = 20;
  string last_error = 21;
  string tx_hash = 22;
  int64 created_at = 23;
  int64 processed_at = 24;
  int64 completed_at = 25;
  int64 block_height = 26;
}

// Params defines the parameters for the settlement module.
message Params {
  string platform_fee_rate = 1;
  string validator_fee_rate = 2;
  uint64 min_escrow_duration = 3;
  uint64 max_escrow_duration = 4;
  uint64 settlement_period = 5;
  uint64 reward_claim_expiry = 6;
  string min_settlement_amount = 7;
  uint64 usage_grace_period = 8;
  uint64 staking_reward_epoch_length = 9;
  string verification_reward_amount = 10;
  string payout_holdback_rate = 11;
  uint32 max_payout_retries = 12;
  uint64 dispute_window_duration = 13;
  uint32 usage_reward_rate_bps = 14;
  uint32 usage_reward_cpu_multiplier_bps = 15;
  uint32 usage_reward_memory_multiplier_bps = 16;
  uint32 usage_reward_storage_multiplier_bps = 17;
  uint32 usage_reward_gpu_multiplier_bps = 18;
  uint32 usage_reward_network_multiplier_bps = 19;
  uint32 usage_reward_sla_ontime_multiplier_bps = 20;
  uint32 usage_reward_sla_late_multiplier_bps = 21;
  uint32 usage_reward_ack_multiplier_bps = 22;
  uint32 usage_reward_unack_multiplier_bps = 23;
  bool fiat_conversion_enabled = 24;
  string fiat_conversion_min_amount = 25;
  string fiat_conversion_max_amount = 26;
  string fiat_conversion_daily_limit = 27;
  string fiat_conversion_stable_denom = 28;
  string fiat_conversion_stable_symbol = 29;
  uint32 fiat_conversion_stable_decimals = 30;
  string fiat_conversion_default_fiat = 31;
  string fiat_conversion_default_method = 32;
  string fiat_conversion_max_slippage = 33;
  int32 fiat_conversion_risk_score_threshold = 34;
  string fiat_conversion_min_compliance_status = 35;
}

// TokenSpec captures token metadata for swaps.
message TokenSpec {
  string symbol = 1;
  string denom = 2;
  uint32 decimals = 3;
  string chain_id = 4;
}

// FiatPayoutPreference configures provider fiat conversion preferences.
message FiatPayoutPreference {
  string provider = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  bool enabled = 2;
  string fiat_currency = 3;
  string payment_method = 4;
  string destination_ref = 5;
  string destination_hash = 6;
  string destination_region = 7;
  string preferred_dex = 8;
  string preferred_off_ramp = 9;
  double slippage_tolerance = 10;
  TokenSpec crypto_token = 11 [(gogoproto.nullable) = false];
  TokenSpec stable_token = 12 [(gogoproto.nullable) = false];
  int64 created_at = 13;
  int64 updated_at = 14;
}

// FiatConversionAuditEntry is an audit log entry for conversions.
message FiatConversionAuditEntry {
  string action = 1;
  string actor = 2;
  string reason = 3;
  int64 timestamp = 4;
  map<string, string> metadata = 5;
}

// FiatConversionRecord stores conversion details.
message FiatConversionRecord {
  string conversion_id = 1;
  string invoice_id = 2;
  string settlement_id = 3;
  string payout_id = 4;
  string escrow_id = 5;
  string order_id = 6;
  string lease_id = 7;
  string provider = 8 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string customer = 9 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string requested_by = 10;
  int64 requested_at = 11;
  int64 updated_at = 12;
  string state = 13;
  TokenSpec crypto_token = 14 [(gogoproto.nullable) = false];
  TokenSpec stable_token = 15 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin crypto_amount = 16 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin stable_amount = 17 [(gogoproto.nullable) = false];
  string fiat_currency = 18;
  string fiat_amount = 19;
  string payment_method = 20;
  string destination_ref = 21;
  string destination_hash = 22;
  string destination_region = 23;
  double slippage_tolerance = 24;
  string dex_adapter = 25;
  string swap_quote_id = 26;
  string swap_tx_hash = 27;
  string swap_status = 28;
  string off_ramp_provider = 29;
  string off_ramp_quote_id = 30;
  string off_ramp_id = 31;
  string off_ramp_status = 32;
  string off_ramp_reference = 33;
  string compliance_status = 34;
  int32 compliance_risk_score = 35;
  int64 compliance_checked_at = 36;
  string failure_reason = 37;
  repeated FiatConversionAuditEntry audit_trail = 38 [(gogoproto.nullable) = false];
}

// QueryEscrowRequest is the request for querying an escrow by ID.
message QueryEscrowRequest {
  string escrow_id = 1;
}

// QueryEscrowResponse is the response for querying an escrow by ID.
message QueryEscrowResponse {
  EscrowAccount escrow = 1;
}

// QueryEscrowsByOrderRequest is the request for querying escrows by order.
message QueryEscrowsByOrderRequest {
  string order_id = 1;
}

// QueryEscrowsByOrderResponse is the response for querying escrows by order.
message QueryEscrowsByOrderResponse {
  repeated EscrowAccount escrows = 1 [(gogoproto.nullable) = false];
}

// QueryEscrowsByStateRequest is the request for querying escrows by state.
message QueryEscrowsByStateRequest {
  string state = 1;
}

// QueryEscrowsByStateResponse is the response for querying escrows by state.
message QueryEscrowsByStateResponse {
  repeated EscrowAccount escrows = 1 [(gogoproto.nullable) = false];
}

// QuerySettlementRequest is the request for querying a settlement by ID.
message QuerySettlementRequest {
  string settlement_id = 1;
}

// QuerySettlementResponse is the response for querying a settlement by ID.
message QuerySettlementResponse {
  SettlementRecord settlement = 1;
}

// QuerySettlementsByOrderRequest is the request for querying settlements by order.
message QuerySettlementsByOrderRequest {
  string order_id = 1;
}

// QuerySettlementsByOrderResponse is the response for querying settlements by order.
message QuerySettlementsByOrderResponse {
  repeated SettlementRecord settlements = 1 [(gogoproto.nullable) = false];
}

// QueryUsageRecordRequest is the request for querying a usage record by ID.
message QueryUsageRecordRequest {
  string usage_id = 1;
}

// QueryUsageRecordResponse is the response for querying a usage record by ID.
message QueryUsageRecordResponse {
  UsageRecord usage_record = 1;
}

// QueryUsageRecordsByOrderRequest is the request for querying usage records by order.
message QueryUsageRecordsByOrderRequest {
  string order_id = 1;
}

// QueryUsageRecordsByOrderResponse is the response for querying usage records by order.
message QueryUsageRecordsByOrderResponse {
  repeated UsageRecord usage_records = 1 [(gogoproto.nullable) = false];
}

// QueryUsageSummaryRequest is the request for querying usage summaries.
message QueryUsageSummaryRequest {
  string order_id = 1;
  string provider = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  int64 period_start = 3;
  int64 period_end = 4;
}

// QueryUsageSummaryResponse is the response for querying usage summaries.
message QueryUsageSummaryResponse {
  UsageSummary summary = 1 [(gogoproto.nullable) = false];
}

// QueryRewardDistributionRequest is the request for querying a reward distribution by ID.
message QueryRewardDistributionRequest {
  string distribution_id = 1;
}

// QueryRewardDistributionResponse is the response for querying a reward distribution by ID.
message QueryRewardDistributionResponse {
  RewardDistribution distribution = 1;
}

// QueryRewardsByEpochRequest is the request for querying rewards by epoch.
message QueryRewardsByEpochRequest {
  uint64 epoch_number = 1;
}

// QueryRewardsByEpochResponse is the response for querying rewards by epoch.
message QueryRewardsByEpochResponse {
  repeated RewardDistribution distributions = 1 [(gogoproto.nullable) = false];
}

// QueryRewardHistoryRequest is the request for querying reward history.
message QueryRewardHistoryRequest {
  string address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string source = 2;
  uint32 limit = 3;
  uint32 offset = 4;
}

// QueryRewardHistoryResponse is the response for querying reward history.
message QueryRewardHistoryResponse {
  repeated RewardHistoryEntry entries = 1 [(gogoproto.nullable) = false];
}

// QueryClaimableRewardsRequest is the request for querying claimable rewards.
message QueryClaimableRewardsRequest {
  string address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// QueryClaimableRewardsResponse is the response for querying claimable rewards.
message QueryClaimableRewardsResponse {
  ClaimableRewards rewards = 1;
}

// QueryPayoutRequest is the request for querying a payout by ID.
message QueryPayoutRequest {
  string payout_id = 1;
}

// QueryPayoutResponse is the response for querying a payout by ID.
message QueryPayoutResponse {
  PayoutRecord payout = 1;
}

// QueryPayoutsByProviderRequest is the request for querying payouts by provider.
message QueryPayoutsByProviderRequest {
  string provider = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// QueryPayoutsByProviderResponse is the response for querying payouts by provider.
message QueryPayoutsByProviderResponse {
  repeated PayoutRecord payouts = 1 [(gogoproto.nullable) = false];
}

// QueryParamsRequest is the request for querying module params.
message QueryParamsRequest {}

// QueryParamsResponse is the response for querying module params.
message QueryParamsResponse {
  Params params = 1 [(gogoproto.nullable) = false];
}

// QueryFiatConversionRequest is the request for querying a fiat conversion by ID.
message QueryFiatConversionRequest {
  string conversion_id = 1;
}

// QueryFiatConversionResponse is the response for querying a fiat conversion by ID.
message QueryFiatConversionResponse {
  FiatConversionRecord conversion = 1;
}

// QueryFiatConversionsByProviderRequest is the request for querying fiat conversions by provider.
message QueryFiatConversionsByProviderRequest {
  string provider = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// QueryFiatConversionsByProviderResponse is the response for querying fiat conversions by provider.
message QueryFiatConversionsByProviderResponse {
  repeated FiatConversionRecord conversions = 1 [(gogoproto.nullable) = false];
}

// QueryFiatPayoutPreferenceRequest is the request for querying fiat payout preference.
message QueryFiatPayoutPreferenceRequest {
  string provider = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// QueryFiatPayoutPreferenceResponse is the response for querying fiat payout preference.
message QueryFiatPayoutPreferenceResponse {
  FiatPayoutPreference preference = 1;
}

// Query defines the gRPC querier service for the settlement module.
service Query {
  rpc Escrow(QueryEscrowRequest) returns (QueryEscrowResponse) {
    option (google.api.http).get = "/virtengine/settlement/v1/escrows/{escrow_id}";
  }

  rpc EscrowsByOrder(QueryEscrowsByOrderRequest) returns (QueryEscrowsByOrderResponse) {
    option (google.api.http).get = "/virtengine/settlement/v1/escrows/by-order/{order_id}";
  }

  rpc EscrowsByState(QueryEscrowsByStateRequest) returns (QueryEscrowsByStateResponse) {
    option (google.api.http).get = "/virtengine/settlement/v1/escrows/by-state/{state}";
  }

  rpc Settlement(QuerySettlementRequest) returns (QuerySettlementResponse) {
    option (google.api.http).get = "/virtengine/settlement/v1/settlements/{settlement_id}";
  }

  rpc SettlementsByOrder(QuerySettlementsByOrderRequest) returns (QuerySettlementsByOrderResponse) {
    option (google.api.http).get = "/virtengine/settlement/v1/settlements/by-order/{order_id}";
  }

  rpc UsageRecord(QueryUsageRecordRequest) returns (QueryUsageRecordResponse) {
    option (google.api.http).get = "/virtengine/settlement/v1/usage/{usage_id}";
  }

  rpc UsageRecordsByOrder(QueryUsageRecordsByOrderRequest) returns (QueryUsageRecordsByOrderResponse) {
    option (google.api.http).get = "/virtengine/settlement/v1/usage/by-order/{order_id}";
  }

  rpc UsageSummary(QueryUsageSummaryRequest) returns (QueryUsageSummaryResponse) {
    option (google.api.http).get = "/virtengine/settlement/v1/usage/summary";
  }

  rpc RewardDistribution(QueryRewardDistributionRequest) returns (QueryRewardDistributionResponse) {
    option (google.api.http).get = "/virtengine/settlement/v1/rewards/distributions/{distribution_id}";
  }

  rpc RewardsByEpoch(QueryRewardsByEpochRequest) returns (QueryRewardsByEpochResponse) {
    option (google.api.http).get = "/virtengine/settlement/v1/rewards/epochs/{epoch_number}";
  }

  rpc RewardHistory(QueryRewardHistoryRequest) returns (QueryRewardHistoryResponse) {
    option (google.api.http).get = "/virtengine/settlement/v1/rewards/history/{address}";
  }

  rpc ClaimableRewards(QueryClaimableRewardsRequest) returns (QueryClaimableRewardsResponse) {
    option (google.api.http).get = "/virtengine/settlement/v1/rewards/claimable/{address}";
  }

  rpc Payout(QueryPayoutRequest) returns (QueryPayoutResponse) {
    option (google.api.http).get = "/virtengine/settlement/v1/payouts/{payout_id}";
  }

  rpc PayoutsByProvider(QueryPayoutsByProviderRequest) returns (QueryPayoutsByProviderResponse) {
    option (google.api.http).get = "/virtengine/settlement/v1/payouts/by-provider/{provider}";
  }

  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/virtengine/settlement/v1/params";
  }

  rpc FiatConversion(QueryFiatConversionRequest) returns (QueryFiatConversionResponse) {
    option (google.api.http).get = "/virtengine/settlement/v1/fiat/conversions/{conversion_id}";
  }

  rpc FiatConversionsByProvider(QueryFiatConversionsByProviderRequest) returns (QueryFiatConversionsByProviderResponse) {
    option (google.api.http).get = "/virtengine/settlement/v1/fiat/conversions/by-provider/{provider}";
  }

  rpc FiatPayoutPreference(QueryFiatPayoutPreferenceRequest) returns (QueryFiatPayoutPreferenceResponse) {
    option (google.api.http).get = "/virtengine/settlement/v1/fiat/preferences/{provider}";
  }
}
